[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scenes/Player/PlayerUtilities/PlayerHurtbox.gd" type="Script" id=1]

[node name="PlayerHurtbox" type="Area2D"]
collision_layer = 16
collision_mask = 0
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="Timer" type="Timer" parent="."]

[connection signal="invincibility_ended" from="." to="." method="_on_PlayerHurtbox_invincibility_ended"]
[connection signal="invincibility_started" from="." to="." method="_on_PlayerHurtbox_invincibility_started"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
